--- a/node-crud/package.json
+++ b/node-crud/package.json
@@ -6,6 +6,22 @@
   "repository": "https://github.com/WaifuForever/node-vehicles-registration",
   "author": "Waifu_Forever",
   "license": "MIT",
+  "jest": {
+    "verbose": true,
+    "transform": {
+        "^.+\\.ts?$": "ts-jest"
+    },
+    "setupFiles": [
+        "dotenv/config"
+    ],
+    "modulePathIgnorePatterns": [
+        "dist",
+        "postgres"
+    ],
+    "setupFilesAfterEnv": [
+        "./test/config/test.config.ts"
+    ]
+},
   "scripts": {
     "seed:make": "NODE_ENV=dev knex --knexfile src/database/config/migration.config.ts seed:make -x ts",
     "seed:run": "NODE_ENV=dev knex --knexfile src/database/config/migration.config.ts seed:run",
@@ -23,7 +39,9 @@
     "dc:deepdown": "yarn dc:delete:volumes && yarn dc:delete:postgres",
     "dc:stop": "sudo docker-compose --env-file .env.dev stop",
     "dc:delete:volumes": "sudo docker-compose --env-file .env.dev down -v",
-    "dc:delete:postgres": "sudo rm -rf ../postgres"
+    "dc:delete:postgres": "sudo rm -rf ../postgres",
+    "dc:restart": "sudo docker restart b40cfc9e7590",
+    "dc:stop:server": "sudo docker stop b40cfc9e7590"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -36,6 +54,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.5.1",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   }
